build: fix CI cleaning workspace

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,12 @@ jobs:
 
 
     steps:
+
+      - name: clean workspace
+        run: |
+          rm -rf ${{ github.workspace }}
+          mkdir ${{ github.workspace }}
+
       - name: checkout
         uses: actions/checkout@v4
         with:
@@ -181,11 +187,4 @@ jobs:
           event-type: metwork-trigger-${{ steps.SetVariables.outputs.branch }}
           client-payload: '{"branch": "${{ steps.SetVariables.outputs.branch }}", "os": "centos7"}'
 
-
-
-      - name: chown on build outputs
-        if: always()
-        run: |
-          sudo chown -R githubactions:metworkpub .
-          sudo chmod -R 775 .
 
