--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -72,6 +72,7 @@ fonttools==4.57.0
 GDAL==3.10.3
 geographiclib==2.0
 geopandas==1.0.1
+geopy==2.4.1
 geos==0.2.3
 graphviz==0.20.3
 greenlet==3.2.1
