--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -22,7 +22,7 @@ cloudpickle==2.2.0
 configobj==5.0.6
 contourpy==1.0.6
 cycler==0.11.0
-dask==2022.11.1
+dask[array]==2022.11.1
 dateparser==1.1.4
 descartes==1.1.0
 distributed==2022.11.1
