feat: add icclim (now compatible with numpy >= 2.1)

--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
@@ -67,8 +67,7 @@ pyepsg
 statsmodels
 bokeh
 astropy
-#note : icclim 7.0.0 requires xclim>=0.45,<=0.48
-#icclim (temporarly removed for Python 3.13 compatibility)
+icclim (temporarly removed for Python 3.13 compatibility)
 protobuf
 xclim
 Pint
