--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -20,7 +20,7 @@ cdo==1.6.1
 cdsapi==0.7.5
 cftime==1.6.4.post1
 cf-units==3.3.0
-cf-xarray==0.10.5
+cf-xarray==0.10.6
 cfgrib==0.9.15.0
 click-plugins==1.1.1
 cligj==0.7.2
@@ -32,14 +32,14 @@ conflator==0.1.7
 contourpy==1.3.2
 copernicusmarine==2.1.0
 covjson_pydantic==0.6.0
-covjsonkit==0.1.9
+covjsonkit==0.1.14
 cramjam==2.10.0
 cycler==0.12.1
-dask==2025.4.1
+dask==2025.7.0
 datapi==0.4.0
 dateparser==1.2.1
 DateTime==5.5
-distributed==2025.4.1
+distributed==2025.7.0
 docstring_parser==0.16
 donfig==0.8.1.post1
 earthkit-climate==0.1.1
@@ -81,6 +81,7 @@ h5py==3.13.0
 hda==2.29
 HeapDict==1.0.1
 humanfriendly==10.0
+icclim==7.0.4
 imageio==2.37.0
 itsdangerous==2.2.0
 jsmin==3.0.1
@@ -180,7 +181,7 @@ trollimage==1.26.0
 trollsift==0.5.3
 tzlocal==5.3.1
 windrose==1.9.2
-xclim==0.56.0
+xclim==0.58.1
 xxhash==3.5.0
 xyzservices==2025.4.0
 yamale==6.0.0
