--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -33,7 +33,7 @@ contourpy==1.3.2
 copernicusmarine==2.1.2
 covjson_pydantic==0.6.0
 covjsonkit==0.2.8
-cramjam==2.10.0
+cramjam==2.11.0
 crc32c==2.7.1
 cycler==0.12.1
 dask==2025.11.0
@@ -55,7 +55,7 @@ earthkit-time==0.1.7
 earthkit-transforms==0.4.0
 earthkit==0.10.2
 eccodes==2.41.0
-eckitlib==1.29.2
+eckitlib==1.32.3.6
 ecmwf-api-client==1.6.5
 ecmwf-opendata==0.3.19
 ek-aggregate==0.1.2
@@ -75,7 +75,7 @@ geographiclib==2.0
 geopandas==1.0.1
 geopy==2.4.1
 graphviz==0.20.3
-greenlet==3.2.1
+greenlet==3.2.4
 h5netcdf==1.6.1
 h5py==3.13.0
 hda==2.29
@@ -89,7 +89,7 @@ jsonpickle==4.0.5
 kiwisolver==1.4.8
 lark==1.1.8
 lazy-loader==0.4
-llvmlite==0.45.1
+llvmlite==0.46.0rc1
 lmoments3==1.0.8
 locket==1.0.0
 lru-dict==1.3.0
@@ -104,11 +104,11 @@ munch==4.0.0
 narwhals==1.37.0
 nco==1.1.2
 netCDF4==1.7.2
-numba==0.62.1
+numba==0.63.0rc1
 numcodecs==0.16.2
 numexpr==2.11.0
 numpngw==0.1.4
-odclib==1.6.0
+odclib==1.6.2.6
 opencv-contrib-python-headless==4.11.0.86
 openturns==1.24
 -e git+https://gitlab.com/thebaptiste/batman.git@1.9.3-develop-mf#egg=ot-batman
@@ -127,7 +127,7 @@ pox==0.3.6
 ppft==1.7.7
 protobuf==5.29.5
 puremagic==1.29
-pyarrow==20.0.0
+pyarrow==22.0.0
 pycoast==1.7.1
 pycurl==7.45.6
 pydecorate==0.4.0
