--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -53,13 +53,15 @@ earthkit-regrid==0.4.0
 earthkit-time==0.1.7
 earthkit-transforms==0.4.0
 earthkit==0.10.2
-eccodes==2.41.0
+eccodes==2.44.0
+eccodeslib==2.43.0
 eckitlib==1.32.3.6
 ecmwf-api-client==1.6.5
 ecmwf-opendata==0.3.19
 ek-aggregate==0.1.2
 fasteners==0.19
 fastparquet==2024.11.0
+fckitlib==0.14.0
 ffmpy==0.5.0
 findlibs==0.1.1
 Fiona==1.10.1
