--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -43,28 +43,30 @@ distributed==2025.11.0
 docstring_parser==0.16
 donfig==0.8.1.post1
 earthkit-climate==0.1.1
-earthkit-data==0.13.8
-earthkit-geo==0.3.0
-earthkit-hydro==0.1.3
-earthkit-meteo==0.3.0
-earthkit-plots==0.3.1
-earthkit-plots-default-styles==0.1.0
-earthkit-regrid==0.4.0
+earthkit-data==0.18.3
+earthkit-geo==0.4.0
+earthkit-hydro==1.1.0
+earthkit-meteo==0.5.0
+earthkit-plots==0.5.2
+earthkit-plots-default-styles==0.1.3
+earthkit-regrid==0.5.1
 earthkit-time==0.1.7
-earthkit-transforms==0.4.0
-earthkit==0.10.2
+earthkit-transforms==0.5.3.1
+earthkit-utils==0.1.2
+earthkit-workflows==0.5.1
+earthkit==0.13.2
 eccodes==2.44.0
 eccodeslib==2.44.1.8
 eckitlib==1.32.4.8
 ecmwf-api-client==1.6.5
 ecmwf-opendata==0.3.19
-ek-aggregate==0.1.2
 fasteners==0.19
 fastparquet==2024.11.0
 fckitlib==0.14.1.8
 ffmpy==0.5.0
 findlibs==0.1.1
 Fiona==1.10.1
+fire==0.7.1
 Flask==3.1.1
 flexcache==0.3
 flexparser==0.4
@@ -122,7 +124,7 @@ Pint==0.24.4
 plotly==6.0.1
 pngquant==3.0.3
 polars==1.29.0
-polytope-client==0.7.4
+polytope-client==0.7.9
 pooch==1.8.2
 pox==0.3.6
 ppft==1.7.7
@@ -134,12 +136,13 @@ pycurl==7.45.6
 pydecorate==0.4.0
 pyepsg==0.4.0
 pyerfa==2.0.1.5
-pyfdb==0.1.2
+pyfdb==0.1.3
 pygeoapi==0.21.0
 pygeofilter==0.3.1
 pygeoif==1.5.1
 pygmt==0.15.0
 pygraphviz==1.14
+pygribjump==0.10.3.dev20250909
 pyhdf==0.11.6
 pykdtree==1.4.1
 pyodc==1.6.0
@@ -152,7 +155,9 @@ pyrsistent==0.20.0
 pyshp==2.3.1
 pystac==1.13.0
 pysteps==1.18.1
+pyvis==0.3.1
 PyWavelets==1.8.0
+pyzmq==26.4.0
 rasterio==1.4.3
 regionmask==0.13.0
 rich-argparse==1.7.0
@@ -186,4 +191,5 @@ xyzservices==2025.4.0
 yamale==6.0.0
 zarr==3.1.2
 zict==3.0.0
+zmq==0.0.0
 zope.interface==7.2
