feat: downgrade zarr (merge integration branch)

--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -104,7 +104,7 @@ narwhals==1.37.0
 nco==1.1.2
 netCDF4==1.7.2
 numba==0.63.1
-numcodecs==0.16.2
+numcodecs==0.15.1
 numexpr==2.11.0
 numpngw==0.1.4
 odclib==1.6.2.6
@@ -152,6 +152,7 @@ pystac==1.13.0
 pysteps==1.18.1
 PyWavelets==1.8.0
 rasterio==1.4.3
+rechunker==0.5.4
 regionmask==0.13.0
 rich-argparse==1.7.0
 rtree==1.4.0
@@ -170,7 +171,7 @@ statsmodels==0.14.4
 tblib==3.1.0
 tenacity==9.1.2
 thermofeel==2.1.1
-tifffile==2025.9.9
+tifffile==2025.5.10
 tinydb==4.8.2
 toolz==1.0.0
 trollimage==1.26.0
@@ -182,6 +183,6 @@ xsdba==0.4.0
 xxhash==3.5.0
 xyzservices==2025.4.0
 yamale==6.0.0
-zarr==3.1.2
+zarr==2.18.7
 zict==3.0.0
 zope.interface==7.2
