build: remove earthkit stuff not required for the time being

--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
@@ -91,6 +91,7 @@ apng
 thermofeel
 # pyfdb (earthkit.data[all] dependency) requires fdb5 (see https://github.com/ecmwf/fdb, not provided by Metwork for the time being)
 # pyfgribjump (earthkit.data[all] dependency) requires gribjump (see https://github.com/ecmwf/gribjump, not provided by Metwork for the time being)
+# do not install earthkit because it has earthkit.data[all] as a dependency
 copernicusmarine
 geopy
 pygeoapi
